# ikaria

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
_templates/: explore_template.ipynb  pyproject.toml
style-transfer/demonstration/: images.py  layers.py  losses.py  pagoni.py  pyproject.toml  training.py
style-transfer/legacy/: 2108_nst.ipynb  2301-nst.ipynb
