[project]
name = "explore-ikaria-template-notebook"
version = "0.1.0"
description = ""
authors = [{ name = "MR", email = "<raffmatth@gmail.com>" }]
requires-python = ">=3.13, <3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
ipykernel = "^6.29"
pyyaml = "^6.0.2"
pyarrow = "^21.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
types-pyyaml = "^6.0.12.11"

[[tool.poetry.source]]
name = "nemea-index"
url = "http://localhost:8080/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false